stylesheet.css
/* ---------- FONTS ---------- */
/* Found from https://www.w3schools.com/howto/howto_google_fonts.asp */

body {
  font-family: Roboto;
  margin: 0;
}

/* ---------- CENTER CONTENT ---------- */

/* Inspired by https://www.w3schools.com/howto/howto_css_center_website.asp */
.content {
  max-width: 1200px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  padding: 2%;
  margin-top: 1%;
  margin: auto;
}

/* Banner Image *
/* Written by Christine */
.banner-image {
  background-color: rgb(34,34,34); /* black to match logo */
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  text-align: center;
}

/* ---------- ABOUT US SECTION ---------- */

/* Written by Christine */

/* Inspired and sourced from https://www.w3schools.com/howto/howto_css_parallax.asp */
/* Parralax */
body, html {
  height: 100%;
}

.parallax-1 {
  background-image: url("Images/parallax_1.jpg");         /* Stock photo grabbed from https://burst.shopify.com/ */
  min-height: 100%;
}

.parallax-2 {
  background-image: url("Images/parallax_2.jpg");         /* Stock photo grabbed from https://burst.shopify.com/ */
  min-height: 500px;
}

.parallax-3 {
  background-image: url("Images/parallax_3.jpg");         /* Stock photo grabbed from https://burst.shopify.com/ */
  min-height: 500px;
}

.parallax-1, .parallax-2, .parallax-3 {                   /* These settings help dsecribe the images and apply an opacity to it */
  position: relative;                                     /* As well as keeping it fixed to help give a parallax effect */
  opacity: 0.65;
  background-attachment: fixed;
  background-color: transparent;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.caption {
  position: absolute;
  left: 0;
  top: 50%;
  width: 100%;
  text-align: center;
  color: #000;
}

.caption span.border {
  background-color: #111;
  color: #fff;
  padding: 18px;
  font-size: 25px;
  letter-spacing: 10px;
}

.parallax-text {                                          /* This is for the block sections in between the images */
  background-color: #656565;                            /* Grey is chosen since we have a black scheme ongoing */
  color: #fff;
  align-content: center;
  text-align: center;
  padding: 50px 80px;
  letter-spacing: 3px;
  text-align: justify;
}

/* Turn off parallax scrolling for tablets and phones */
@media only screen and (max-device-width: 1024px) {
  .parallax-1, .parallax-2, .parallax-3 {
    background-attachment: scroll;
  }
}

/* Meet the team */

/* Add some shadows to create a card effect */
.card {
  display: flex;
  margin-bottom: 20px;
}

/* Setting image size */
.img-container {
  width: 25%;
}

.img-content {
  width: 100%;
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}

/* Some left and right padding inside the container */
.container {
  width: 75%;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	
	display: inline-block; /* Box outline */
	border: 1px solid #696969;
	border-radius: 8px;
  padding: 20px;
  
  color: white;
}

/* Clear floats */
.container::after, .row::after {
  content: "";
  clear: both;
  display: table;
  color: white;
}

.title {
  color: white;
  font-style: italic;
}


/* ---------- CONTACT SECTION ---------- */


/* Written by Christine */

/* Background Image */
/* Inspired by w3schools - paired with specific parameters to show a background and create a design */
.background-1 {
  background-image: url("Images/background_1.jpg");         /* Stock photo grabbed from https://burst.shopify.com/ */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding-top: 100px;
  padding-bottom: 100px;
  height: 100vh;
}

/* Section 1 - Email Contact Us */

/* Inspired from https://www.w3schools.com/howto/howto_css_contact_section.asp */
* {
  box-sizing: border-box;
}

/* Style inputs */
input[type=text], select, textarea {
  width: 100%;
  padding: 10px;
  border: 1px solid #ccc;
  margin-top: 7px;
  margin-bottom: 15px;
  resize: vertical;
}

input[type=submit] {
  background-color: rgb(113,222,125);                              /* Matching the green part of the logo color */
  color: white;
  padding: 12px 20px;
  border: none;
  cursor: pointer;
}

input[type=submit]:hover {
  background-color: rgb(95,186,105);                              /* Picking a darker shade of green for hover */
}
  
/* Style the container/contact section */
.Section-1 {
  margin: 0 auto;
  text-align: left;
  color: #333;
  background-color: white;
  border-radius: 5px;
  padding: 15px;
  top: 10px;
  max-width: 800px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}  

/* Just used to stop footer going over contact form */
.contact-info {
  height: 100px;
  background-color: #333;
}
  
  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
  @media screen and (max-width: 600px) {
    .column, input[type=submit] {
      width: 100%;
      margin-top: 0;
    }
  }


/* Style for the navigation bar. Section by Ian Wright. Sourced from W3Schools */

.topnav {
  overflow: hidden;
  background-color: #333;
}

.topnav a {
  float: right;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 10px 16px;
  text-decoration: none;
  font-size: 17px;
}

.active {
  background-color: rgb(113,222,125);
  color: white;
}

.topnav .icon {
  display: none;
}

.dropdown {
  float: left;
  overflow: hidden;
}

.dropdown .dropbtn {
  font-size: 17px;    
  border: none;
  outline: none;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  font-family: inherit;
  margin: 0;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  float: none;
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}

.topnav a:hover, .dropdown:hover .dropbtn {
  background-color: #555;
  color: white;
}

.dropdown-content a:hover {
  background-color: #ddd;
  color: black;
}

.dropdown:hover .dropdown-content {
  display: block;
}

@media screen and (max-width: 600px) {
  .topnav a:not(:first-child), .dropdown .dropbtn {
    display: none;
  }
	
  .topnav a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
	
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
	
  .topnav.responsive .dropdown {float: none;}
  .topnav.responsive .dropdown-content {position: relative;}
  .topnav.responsive .dropdown .dropbtn {
    display: block;
    width: 100%;
    text-align: left;
  }
}

/* CSS for Services section by Ian Wright and sourced from W3Schools*/

.column1 {
  float: left;
  width: 33.3%;
  margin-bottom: 16px;
  padding: 0 8px;
}

/* Display the columns below each other instead of side by side on small screens */

@media screen and (max-width: 600px) {
  .column1 {
    width: 100%;
    display: block;
  }
}

.responsive5 {
  width: 100%;
  height: auto;
}

.header5 {
  background-image: url("Images/sunrise3.jpg"); /*imaged sourcewd from https://www.religiousstudiesproject.com/ */
  padding: 20px;
  text-align: center;
  font-size: 35px;
  color: white;
}

@media screen and (max-width: 600px) {
  .header5 {
    width: 100%;
    display: block;
  }
}

* {
  box-sizing: border-box;
}

/* Create three columns of equal width for price list. Design inspired by www.dronedeploy.com/pricing.html  */

.columns2 {
  float: left;
  width: 33.3%;
  padding: 8px;
}

/* Style the list */
.price {
  list-style-type: none;
  border: 1px solid #eee;
  margin: 0;
  padding: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

/* Add shadows on hover */
.price:hover {
  box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
}

/* Pricing header */
.price .header2 {
  background-color: #111;
  color: white;
  font-size: 25px;
}

/* List items */
.price li {
  border-bottom: 1px solid #eee;
  padding: 20px;
  text-align: center;
}

/* Grey list item */
.price .grey {
  background-color: white;
  font-size: 20px;
}

/* The "Sign Up" button */
.button2 {
  background-color: rgb(113,222,125);
  border: none;
  color: white;
  padding: 10px 25px;
  text-align: center;
  text-decoration: none;
  font-size: 18px;
}

/* Change the width of the three columns to 100%
(to stack horizontally on small screens) */
@media only screen and (max-width: 600px) {
  .columns2 {
    width: 100%;
  }
}

/* Index by Dani Cotton*/

.index-column{
  font-size:18px
}
.container-index {
  width: 100%;
  padding: 10px;
  color: white;
  background-color: #696969;
  text-align: center;
}
/* Make index responsive*/
@media only screen and (max-width: 600px){
  .index-column .container-index .index-row{
    width: 100%;
  }
}

/* Portfolio by Dani Cotton*/
.container-port {
  width: 100%;
  padding: 10px;
  color: white;
  background-color: #696969;
  text-align: center;
}
.port-column {
  font-size: 18px
}

/* Make portfolio responsive*/
@media only screen and (max-width: 600px){
    .container-port .port-column .port-row{
      width: 100%;
    }
}

/* Footer. Designed by Dani Cotton*/

.leftside-footer {
  padding: 40px;
  color: white;
  background-color: #333;
}
.rightside-footer {
  padding: 40px;
  color: white;
  background-color: #333;
}
.footer-container {
  background-color: #333;
  color: white;
  text-align: center;
}

.footer-bottom-area {
  color: white;
}

.rightside-footer{
 float: right;
}
/* Make footer responsive*/
@media only screen and (max-width: 600px){
  .leftside-footer .rightside-footer .footer-bottom-area .footer-container{
    width: 100%
  }
}

